crates/knok/tests/ui/transpose_rank.stderr
error: transpose currently supports rank-2 tensors only
 --> tests/ui/transpose_rank.rs:3:1
  |
3 | #[knok::graph(backend = "llvm-cpu")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `knok::prelude::*`
 --> tests/ui/transpose_rank.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
